--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,5 +5,30 @@
   <%= @category.name %>
 </p>
 
+<p>
+  <strong>Expenses:</strong>
+  <%= @category.expenses.sum(&:value) %>
+  <% @category_expenses.each do |expense| %>
+  <div class="row">
+    <div class="col-xs-8 col-xs-offset-2">
+      <div class="well well-lg">
+        <div class="article-title">
+          <%= link_to expense.value, expense_path(expense) %>
+        </div>
+        <div class="article-body">
+          <%= truncate(expense.description, length: 100) %>
+        </div>
+         <div class="article-actions">
+          <%= link_to 'Edit this expense', edit_expense_path(expense), class: "btn btn-xs btn-primary" %>
+          <%= link_to "Delete this expense", expense_path(expense), method: :delete,
+                                        data: { confirm: "Are you sure you want to delete the expense?"},
+                                        class: "btn btn-xs btn-danger" %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
+</p>
+<%= link_to 'New Expense', new_expense_path(@category) %> |
 <%= link_to 'Edit', edit_category_path(@category) %> |
 <%= link_to 'Back', categories_path %>
