--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,4 @@
 <p id="notice"><%= notice %></p>
-
 <h1>Categories</h1>
 
 <table>
@@ -11,19 +10,24 @@
   </thead>
 
   <tbody>
-    <% @categories.each do |category| %>
-      <tr>
-        <td><%= category.name %></td>
-        <td><%= category.expenses.sum(&:value) %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
+    <% @categories.each do |category| %>
+      <% if (current_user == category.user) %>
+        <tr>
+          <td><%= category.name %></td>
+          <td><%= category.expenses.sum(&:value) %></td>
+          <td><%= link_to 'Show', category %></td>
+          <td><%= link_to 'Edit', edit_category_path(category) %></td>
+          <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    <% end %>
+      <td>All expenses: </td>
+      <td><%= @expenses.where(user_id: current_user).sum(&:value) %></td>
+    </tbody>
+  </table>
+
+  <br>
 
 <%= link_to 'New Category', new_category_path %>
 <%= link_to 'Create Basic Categories', 'new_basic' %>
