--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,11 +1,11 @@
-<%= form_for(expense) do |f| %>
+<%= form_for([expense.category, expense]) do |f| %>
   <% if expense.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(expense.errors.count, "error") %> prohibited this expense from being saved:</h2>
 
       <ul>
-      <% expense.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+      <% expense.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
       <% end %>
       </ul>
     </div>
@@ -22,8 +22,8 @@
   </div>
   
   <div class="field">
-    <%= f.label :category_id %>
-    <%= f.collection_select :category_id, Category.all, :id, :name %>
+    
+  
   </div>
 
   <div class="actions">
