--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -12,13 +12,10 @@
   </thead>
 
   <tbody>
-    <% @expenses.each do |expense| %>
+    <% @expenses.each do | expense| %>
       <tr>
         <td><%= expense.value %></td>
-        <td><%= expense.description %></td>
-        <td><%= link_to 'Show', expense %></td>
-        <td><%= link_to 'Edit', edit_expense_path(expense) %></td>
-        <td><%= link_to 'Destroy', expense, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to expense.description, category_expense_path(@category, expense) %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New Expense', new_expense_path %>
+<%= link_to 'New Expense', new_category_expense_path %>
