--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Expense</h1>
+<h1>New Expense for <%= @category.name %></h1>
 
 <%= render 'form', expense: @expense %>
 
-<%= link_to 'Back', expenses_path %>
+<%= link_to 'Back', categories_path %>
