--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">My Wallet</a>
+        <a class="navbar-brand">MyWallet</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
           <% if user_signed_in? %>  
@@ -69,7 +69,7 @@
           <div class="well sidebar-nav">
             <h3>Menu</h3>
             <ul class="nav nav-list">
-              <li><%= link_to "Categories", "categories#index"  %></li>
+              <li><%= link_to "Categories", root_path %></li>
               <li><%= link_to "Settings", "/path2"  %></li>
             </ul>
           </div><!--/.well -->
