--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
             <h3>Menu</h3>
             <ul class="nav nav-list">
               <li><%= link_to "Categories", root_path %></li>
-              <li><%= link_to "Settings", "/path2"  %></li>
+              <li><%= link_to "Settings", 'settings'  %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
