--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -2,7 +2,14 @@
 
 <p>
   <strong>Value:</strong>
-  <%= @expense.value %>
+  <% if @setting.currency == ISO4217::Currency.from_code('USD').symbol  %>
+    <td><%= @expense.value %></td>
+  <% elsif @setting.currency == ISO4217::Currency.from_code('EUR').symbol %>
+    <td><%= (@expense.value.to)/(ISO4217::Currency.from_code('EUR').exchange_rate) %></td>
+  <% elsif @setting.currency == ISO4217::Currency.from_code('PLN').symbol %>
+    <td><%= (@expense.value)/(ISO4217::Currency.from_code('PLN').exchange_rate) %></td>
+  <% end %>
+  
 </p>
 
 <p>
