--- a/app/views/settings/_form.html.erb
+++ b/app/views/settings/_form.html.erb
@@ -18,8 +18,9 @@
   
   <div class="field">
     <%= f.label :currency %>
-    <%= f.select :currency, options_for_select([ "€", "$", "PLN" ], "€") %>
+    <%= f.select :currency, options_for_select([ ISO4217::Currency.from_code('USD').symbol, ISO4217::Currency.from_code('PLN').symbol, ISO4217::Currency.from_code('EUR').symbol ], ISO4217::Currency.from_code('USD').symbol) %>
   </div>
+  
 
   <div class="actions">
     <%= f.submit %>
