--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,32 +1,34 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @category.name %>
-</p>
-
-<p>
-  <strong>Expenses:</strong>
+<h5>
+  <strong><%= @category.name %> expenses:</strong>
+  
   <% if @setting.currency == ISO4217::Currency.from_code('USD').symbol  %>
-    <%= @category.expenses.sum(&:value) %>
+    <% exp_sum = @category.expenses.sum(&:value) %>
+    
   <% elsif @setting.currency == ISO4217::Currency.from_code('EUR').symbol %>
-    <% @category.expenses.sum(&:value)/(ISO4217::Currency.from_code('EUR').exchange_rate) %>
+    <% exp_sum = @category.expenses.sum(&:value)/(ISO4217::Currency.from_code('EUR').exchange_rate) %>
+    
   <% elsif @setting.currency == ISO4217::Currency.from_code('PLN').symbol %>
-    <% @category.expenses.sum(&:value)/(ISO4217::Currency.from_code('PLN').exchange_rate) %>
+    <% exp_sum = @category.expenses.sum(&:value)/(ISO4217::Currency.from_code('PLN').exchange_rate) %>
+    
   <% end %>
   
+  <%= number_to_currency((exp_sum), :unit => @setting.currency, format: "%n %u") %>
+</h5>
   <% @category_expenses.each do |expense| %>
   <div class="row">
     <div class="col-xs-8 col-xs-offset-2">
-      <div class="well well-lg">
+      <div class="well well-sm">
         <div class="article-title">
           <% if @setting.currency == ISO4217::Currency.from_code('USD').symbol  %>
-            <%= link_to expense.value, category_expense_path(@category, expense) %>
+            <% exp_val = expense.value %>
           <% elsif @setting.currency == ISO4217::Currency.from_code('EUR').symbol %>
-            <%= link_to expense.value/(ISO4217::Currency.from_code('EUR').exchange_rate), category_expense_path(@category, expense) %>
+         
+            <% exp_val = expense.value/(ISO4217::Currency.from_code('EUR').exchange_rate) %>
           <% elsif @setting.currency == ISO4217::Currency.from_code('PLN').symbol %>
-            <%= link_to expense.value/(ISO4217::Currency.from_code('PLN').exchange_rate), category_expense_path(@category, expense) %>
+       
+            <% exp_val = expense.value/(ISO4217::Currency.from_code('PLN').exchange_rate) %>
           <% end %>
+          <%= number_to_currency((exp_val), :unit => @setting.currency, format: "%n %u") %>
           
         </div>
         <div class="article-body">
