--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,58 +1,38 @@
 <div class="table-responsive">  
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Expenses</th>
-        <th>Value</th>
-        <th>Percentage</th>
-        <th colspan="1"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @categories.each do |category| %>
-          <% if (current_user == category.user) %>
-            <% if @setting.currency == ISO4217::Currency.from_code('USD').symbol || @setting.currency == nil  %>
-              <% exp_sum = category.expenses.sum(&:value) %>
-            <% elsif @setting.currency == ISO4217::Currency.from_code('EUR').symbol %>
-              <% exp_sum = category.expenses.sum(&:value)/(ISO4217::Currency.from_code('EUR').exchange_rate) %>
-            <% elsif @setting.currency == ISO4217::Currency.from_code('PLN').symbol %>
-              <% exp_sum = category.expenses.sum(&:value)/(ISO4217::Currency.from_code('PLN').exchange_rate) %>
-            <% end %>
-            <tr>
-              <td><%= link_to category.name, category %></td>
-              <td><%= number_to_currency((exp_sum), :unit => @setting.currency, format: "%n %u") %></td>
-              <% user_exp = @expenses.where(user_id: current_user).sum(&:value) %>
-                <% if user_exp != 0  %>
-                  <td><%= number_to_percentage((category.expenses.sum(&:value))/(user_exp)*100.0, precision: 0) %></td>
-                <% else %>
-                  <td><%= number_to_percentage(0, precision: 0) %></td>
-                <% end %>
-              <td><%= link_to 'New expense', new_category_expense_path(category) %></td>
-              <% end %>
-            <% end %>
-          </tr>
-          <% if @setting.currency == ISO4217::Currency.from_code('USD').symbol || @setting.currency == nil %>
-            <% exp_all_sum = @expenses.where(user_id: current_user).sum(&:value) %>
-            <% budget = @setting.budget %>
-          <% elsif @setting.currency == ISO4217::Currency.from_code('EUR').symbol %>
-            <% exp_all_sum = (@expenses.where(user_id: current_user).sum(&:value))/(ISO4217::Currency.from_code('EUR').exchange_rate) %>
-            <% budget = (@setting.budget)/(ISO4217::Currency.from_code('EUR').exchange_rate) %>
-          <% elsif @setting.currency == ISO4217::Currency.from_code('PLN').symbol %>
-            <% exp_all_sum = (@expenses.where(user_id: current_user).sum(&:value))/(ISO4217::Currency.from_code('PLN').exchange_rate) %>
-            <% budget = (@setting.budget.to_i)/(ISO4217::Currency.from_code('PLN').exchange_rate) %>
-          <% end %>
-          <td>All expenses: </td>
-          <td><%= number_to_currency((exp_all_sum), :unit => @setting.currency, format: "%n %u") %></td>
-          <td>Balance: </td>
-          <% if budget == 0  %>
-            <td>No budget set</td>
-          <% else %>
-            <td><%= number_to_currency((budget) - (exp_all_sum), :unit => @setting.currency, format: "%n %u") %></td>
-          <% end %>
-    </tbody>
-  </table>
-  <p><%= link_to 'New Category', new_category_path %></p>
-  <p><%= link_to 'Create Basic Categories', 'new_basic' %></p>
+ 	<table class="table">
+	    <thead>
+			<tr>
+				<th>Expenses</th>
+				<th>Value</th>
+				<th>Percentage</th>
+				<th colspan="1"></th>
+			</tr>
+	    </thead>
+		<tbody>
+			<% @categories.each do |category| %>
+				<tr>
+					<td><%= link_to category.name, category %></td>
+					<td><%= number_to_currency(category.expense_sum(current_user), :unit => @setting.currency, format: "%n %u") %></td>
+					<% if category.expense_sum(current_user) > 0  %>
+						<td><%= number_to_percentage(category.percentage(current_user), precision: 0) %></td>
+					<% else %>
+						<td><%= number_to_percentage(0, precision: 0) %></td>
+					<% end %>
+					<td><%= link_to 'New expense', new_category_expense_path(category) %></td>
+				</tr>
+			<% end %>
+			<td>All expenses: </td>
+			<td><%= number_to_currency(Expense.all.sum_all(current_user), :unit => @setting.currency, format: "%n %u") %></td>
+			<td>Balance: </td>
+			<% if @setting.budget == 0  %>
+				<td>No budget set</td>
+			<% else %>
+				<td><%= number_to_currency((@setting.budget) - (Expense.all.sum_all(current_user)), :unit => @setting.currency, format: "%n %u") %></td>
+			<% end %>
+		</tbody>
+	</table>
+	<p><%= link_to 'New Category', new_category_path %></p>
+	<p><%= link_to 'Create Basic Categories', 'new_basic' %></p>
 </div>
 
 
