--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,19 +1,26 @@
-<h5>
-  <strong><%= @category.name %> expenses:</strong>
-  
-  <% if @setting.currency == ISO4217::Currency.from_code('USD').symbol  %>
-    <% exp_sum = @category.expenses.sum(&:value) %>
+<div class="row">
+  <h5>
+    <strong><%= @category.name %> expenses:</strong>
     
-  <% elsif @setting.currency == ISO4217::Currency.from_code('EUR').symbol %>
-    <% exp_sum = @category.expenses.sum(&:value)/(ISO4217::Currency.from_code('EUR').exchange_rate) %>
+    <% if @setting.currency == ISO4217::Currency.from_code('USD').symbol  %>
+      <% exp_sum = @category.expenses.sum(&:value) %>
+    <% elsif @setting.currency == ISO4217::Currency.from_code('EUR').symbol %>
+      <% exp_sum = @category.expenses.sum(&:value)/(ISO4217::Currency.from_code('EUR').exchange_rate) %>
+      
+    <% elsif @setting.currency == ISO4217::Currency.from_code('PLN').symbol %>
+      <% exp_sum = @category.expenses.sum(&:value)/(ISO4217::Currency.from_code('PLN').exchange_rate) %>
+      
+    <% end %>
     
-  <% elsif @setting.currency == ISO4217::Currency.from_code('PLN').symbol %>
-    <% exp_sum = @category.expenses.sum(&:value)/(ISO4217::Currency.from_code('PLN').exchange_rate) %>
-    
-  <% end %>
-  
-  <%= number_to_currency((exp_sum), :unit => @setting.currency, format: "%n %u") %>
-</h5>
+    <%= number_to_currency((exp_sum), :unit => @setting.currency, format: "%n %u") %>
+  </h5>
+</div>
+<div class="row">
+  <%= link_to 'New Expense', new_category_expense_path(@category) %> |
+  <%= link_to 'Edit', edit_category_path(@category) %> |
+  <%= link_to 'Delete category', @category, method: :delete, data: { confirm: 'Are you sure?' } %> |
+  <%= link_to 'Back', categories_path %>
+</div>
   <% @category_expenses.each do |expense| %>
   <div class="row">
     <div class="col-xs-8 col-xs-offset-2">
@@ -44,8 +51,3 @@
       </div>
     </div>
   <% end %>
-</p>
-<%= link_to 'New Expense', new_category_expense_path(@category) %> |
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Delete category', @category, method: :delete, data: { confirm: 'Are you sure?' } %> |
-<%= link_to 'Back', categories_path %>
