--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,20 +1,16 @@
-<div class="navbar navbar-default navbar-static-top">
-    <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand">MyWallet</a>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-            <ul class="nav navbar-nav">
-                <% if user_signed_in? %>
-                    <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
-                <% else %>  
-                    <li><%= link_to "Sign up", new_user_registration_path %></li>
-                    <li><%= link_to "Sign in", new_user_session_path %></li>
-                <% end %>
-            </ul>
-        </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">MyWallet</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <% if user_signed_in? %>
+                <li class="nav-item"><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+            <% else %>  
+                <li class="nav-item"><%= link_to "Sign up", new_user_registration_path %></li>
+                <li class="nav-item"><%= link_to "Sign in", new_user_session_path %></li>
+            <% end %>
+        </ul>
     </div>
-</div>
+</nav>
