--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,15 +1,10 @@
-<div class="col-lg-3">
-    <div class="well sidebar-nav">
-        <h3>Menu</h3>
-        <ul class="nav nav-list">
-            <% if user_signed_in? %>  
-                <li><%= link_to "Categories", root_path %></li>
-                <li><%= link_to "Settings", edit_setting_path(@setting)  %></li>
-            <% end %>
+<div class="row">
+    <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
+        <ul class="nav nav-pills flex-column">
+            <h3>Menu</h3>
+            <li class="nav-item"><%= link_to "Categories", root_path %></li>
+            <li class="nav-item"><%= link_to "Settings", edit_setting_path(@setting) %></li>
         </ul>
-    </div>
+    </nav>
 </div>
-<footer>
-    <p>&copy; Karol Onaszkiewicz</p>
-</footer>
 
