--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   </head>
   <body>
     <%= render 'layouts/navigation' %>
-    <div class="container">
+    <div role="main" class="container">
       <div class="row">
         <div class="col-lg-9">
           <%= render 'layouts/messages' %>
