--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -11,11 +11,11 @@
 		</div>
 	<% end %>
 
-	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal fade" id="categoryModal" tabindex="-1" role="dialog" aria-labelledby="categoryModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">Create Category</h5>
+					<h5 class="modal-title" id="categoryModalLabel">Create Category</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
@@ -30,7 +30,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-					<%= f.submit "Create", :class => 'btn btn-primary' %>
+					<%= f.submit :class => 'btn btn-primary' %>
 				</div>
 			</div>
 		</div>
