--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,10 +1,17 @@
 <div class="row">
-  <div class="col-xs-10 col-xs-offset-1">
-    <% flash.each do |name, msg| %>
-     <div class='alert alert-<%="#{name}" %>'>
-       <a href='#' class="close" data-dismiss="alert">&#215;</a>
-       <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
-      </div>
-    <% end %>
-  </div>
+	<div class="col-xs-10 col-xs-offset-1">
+		<% flash.each do |name, msg| %>
+			<%
+			if name == 'alert'
+				name = 'danger'
+			else
+				name = 'success' 
+			end 
+			%>
+			<div class="alert alert-<%="#{name}" %> alert-dismissible fade show" role="alert" >
+				<a href='#' class="close" data-dismiss="alert">&#215;</a>
+				<%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+			</div>
+		<% end %>
+	</div>
 </div>
