--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,20 @@
+<% if @category_error.present? || @expense_error.present? %>
+	<% error = @category_error || @expense_error %>
+	<div id="error_explanation">
+		<h2><%= pluralize(error.errors.count, "error") %> prohibited this category from being saved:</h2>
+
+		<ul>
+			<% error.errors.full_messages.each do |message| %>
+				<li><%= message %></li>
+			<% end %>
+		</ul>
+	</div>
+<% end %>
+
 <div class="table-responsive">  
  	<table class="table">
 	    <thead>
-			<tr>
+			<tr> 
 				<th>Categories</th>
 				<th>Value</th>
 				<th>Percentage</th>
@@ -19,7 +32,7 @@
 						<td><%= number_to_percentage(0, precision: 0) %></td>
 					<% end %>
 					<td>
-						<button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#<%=@expense.id%>Modal">
+						<button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#<%=category.id%>Modal">
 							Add expense
 						</button>
 					</td>
