--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,10 +1,20 @@
 <%= form_for([category, expense]) do |f| %>
+	<% if expense.errors.any? %>
+		<div id="error_explanation">
+			<h2><%= pluralize(expense.errors.count, "error") %> prohibited this expense from being saved:</h2>
+			<ul>
+				<% expense.errors.full_messages.each do |msg| %>
+					<li><%= msg %></li>
+				<% end %>
+			</ul>
+		</div>
+	<% end %>
 
-	<div class="modal fade" id="<%=category.id%>Modal" tabindex="-1" role="dialog" aria-labelledby="<%=category.id%>ModalLabel" aria-hidden="true">
+	<div class="modal fade" id="<%=expense.id%>Modal" tabindex="-1" role="dialog" aria-labelledby="<%=expense.id%>ModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title" id="<%=category.id%>ModalLabel">Create Expense</h5>
+					<h5 class="modal-title" id="<%=expense.id%>ModalLabel">Create Expense</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
