--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
           <%= render 'layouts/messages' %>
           <%= yield %>
         </div>
+        <%= render 'layouts/sidebar' %>
       </div>
     </div>
   </body>
