--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,19 @@
   font-size: 1.3em;
   padding-left: 1.5em;
   margin-bottom: 0.8em;
+}
+
+.expense-actions {
+	padding-left: 6em;
+  padding-bottom: 10px;
+}
+
+.actions {
+  padding-top: 5px;
+  margin-bottom: 0.8em;
+}
+
+.list-group-item {
 
 }
 
@@ -24,3 +37,4 @@
 #error_explanation h2 {
  font-size: 150%;
 }
+
