--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -4,7 +4,7 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title" id="categoryModalLabel">Create Category</h5>
+					<h5 class="modal-title" id="categoryModalLabel">Category</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
