--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="info">About</a>
+                <a class="nav-link" href="<%= url_for(info_path) %>">About</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="<%= url_for(edit_setting_path(@setting)) %>">Settings</a>
