--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,1 +1,45 @@
-INFO
+<div class="jumbotron">
+	<h1 class="display-4" align="center">Projekt <br> Architektury i Technologie Systemów Internetowych</h1>
+	<p class="lead">Strona została wykonana w ramach projektu z przedmiotu realizowanego podczas studiów II stopnia przeprowadzanych w Ośrodku kształcenia na odległość Politechniki Warszawskiej.</p>
+	<hr class="my-4">
+	<p>Informację o serwisie – w jakiej technologii jest wykonany oraz założenia projektu znajdują się pod przyciskiem:</p>
+	<a class="btn btn-secondary btn-lg float-right" data-toggle="modal" data-target="#infoModal">Dowiedz się więcej</a>
+</div>
+
+
+<div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-labelledby="infoModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="infoModalLabel">MyWallet</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<p>MyWallet jest projektem służącym do zarządzania budżetem domowym.</p>
+					<p>Aplikacja:</p>
+					<ul>
+  						<li>pozwala w prosty sposób zapisywać swoje codzienne wydatki</li>
+  						<li>umożliwia segregowanie wydatków poprzez przypisywanie ich do kategorii</li>
+  						<li>jest przyjazna i prosta w obsłudze</li>
+  						<li>pozwala pracę z trzema walutami</li>
+					</ul>
+					<hr class="my-4">
+					<p>
+						Aby zacząć korzystać z aplikacji wystarczy się zarejestrować, serwis posiada restrykcje dostępu dla niezalogowanych użytkowników.
+						Po zalogowaniu istnieje możliwość utworzenia domyślnych kategorii, do których następnie należy dodać odpowiednie wydatki.
+						Serwis oferuje ustawienie odpowiedniej waluty w panelu Settings, po zmianie waluty nasze wydatki zostaną przeliczone po kursie pobranym z yahoo.finances.
+					</p>
+					<hr class="my-4">
+					<p>Serwis został wykonany przy użyciu frameworka Ruby On Rails.</p>
+					<p>Użyte technologie:</p>
+					<ul>
+  						<li>baza danych - PostgreSQL</li>
+  						<li>framework CSS - Bootstrap</li>
+  						<li>platforma chmurowa PaaS - Heroku</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
