--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="<%= url_for(root_path) %>">MyWallet</a>
+    <a class="navbar-brand" href="<%= url_for(categories_path) %>">MyWallet</a>
     <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-            <a class="nav-link" href="<%= url_for(info_path) %>">About</a>
-        </li>
         <% if user_signed_in? %>
+            <li class="nav-item active">
+                <a class="nav-link" href="<%= url_for(categories_path) %>">Home</a>
+            </li>
             <li class="nav-item active">
                 <a class="nav-link" href="<%= url_for(edit_setting_path(@setting)) %>">Settings</a>
             </li>
@@ -12,6 +12,9 @@
     </ul>
     <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
+            <li class="nav-item active">
+                <a class="nav-link" href="<%= url_for(root_path) %>">About</a>
+            </li>
             <li class="nav-item active">
                 <a class="nav-link" href="<%= url_for(destroy_user_session_path) %>" data-method="delete">Sign out</a>
             </li>
