--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -29,7 +29,7 @@
 				<p>
 					Aby zacząć korzystać z aplikacji wystarczy się zarejestrować, serwis posiada restrykcje dostępu dla niezalogowanych użytkowników.
 					Po zalogowaniu istnieje możliwość utworzenia domyślnych kategorii, do których następnie należy dodać odpowiednie wydatki.
-					Serwis oferuje ustawienie odpowiedniej waluty w panelu Settings, po zmianie waluty nasze wydatki zostaną przeliczone po kursie pobranym z Europejskiego Banku Centralnego.
+					Serwis oferuje ustawienie odpowiedniej waluty w panelu Settings.
 				</p>
 				<hr class="my-4">
 				<p>Serwis został wykonany przy użyciu frameworka Ruby On Rails.</p>
