--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -25,8 +25,8 @@
 			<% @categories.each do |category| %>
 				<tr>
 					<td><%= link_to category.name, category %></td>
-					<td><%= number_to_currency(category.expense_sum(current_user), :unit => @setting.currency, format: "%n %u") %></td>
-					<% if category.expense_sum(current_user) > 0  %>
+					<td><%= number_to_currency(category.expense_sum, :unit => @setting.currency, format: "%n %u") %></td>
+					<% if category.expense_sum > 0  %>
 						<td><%= number_to_percentage(category.percentage(current_user), precision: 0) %></td>
 					<% else %>
 						<td><%= number_to_percentage(0, precision: 0) %></td>
