--- a/app/views/settings/_form.html.erb
+++ b/app/views/settings/_form.html.erb
@@ -13,7 +13,7 @@
 	<div class="row">
 		<div class="col-sm-8">
 			<%= f.label :budget %>
-			<%= f.number_field :budget, :value => setting.set_budget, :step => ".01", :class => 'form-control' %>
+			<%= f.number_field :budget, :placeholder => setting.budget * @rates, :step => ".01", :class => 'form-control' %>
 		</div>
 	</div>
 
